Bug #2523 "func_time" test fails on QNX
Submitted: 26 Jan 2004 13:06 Modified: 30 Jan 2004 8:26
Reporter: Lenz Grimmer Email Updates:
Status: Closed
Category:Server Severity:S2 (Serious)
Version:4.0.17 OS:Other (QNX 6.2.1)
Assigned to: Dmitry Lenev Target Version:

[26 Jan 2004 13:06] Lenz Grimmer
Description:
When running the MySQL test suite on QNX, "make test" fails in the func_time
test with the following diff:

func_time                      [ fail ]

Errors are (from /home/mysqldev/buildqnx/test/mysql-standard-4.0.17-pc-nto-qnx-x86/mysql-test/var/log/mysqltest-time) :
/home/mysqldev/buildqnx/test/mysql-standard-4.0.17-pc-nto-qnx-x86/bin/mysqltest: At line 211: Result length mismatch
(the last line(s) may be the ones that caused the die() in mysqltest)
Below are the diffs between actual and expected results:
-------------------------------------------------------
*** r/func_time.result  Mon Dec 15 00:41:50 2003
--- r/func_time.reject  Mon Jan 26 23:58:23 2004
***************
*** 439,442 ****
  1
  select unix_timestamp('1969-12-01 19:00:01');
  unix_timestamp('1969-12-01 19:00:01')
! 0
--- 439,442 ----
  1
  select unix_timestamp('1969-12-01 19:00:01');
  unix_timestamp('1969-12-01 19:00:01')
! 4292496017
-------------------------------------------------------

This seems to be a portability/compilation issue.

How to repeat:
Run func_time test on QNX
[26 Jan 2004 16:25] Dmitry Lenev
This happens because time_t on QNX is unsigned
[26 Jan 2004 16:26] Dmitry Lenev
So check for out of range values my_gmt_sec fails...
[30 Jan 2004 8:26] Dmitry Lenev
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

ChangeSet 1.1695 2004/01/30 19:15:11 dlenev@mysql.com
  Fix for bug #2523 '"func_time" test fails on QNX'.